--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MR.BUR Dental Jobs</title>
+    <link rel="icon" href="/Mr_Bur_Logo.png" />
   </head>
   <body class="bg-gray-50">
     <div id="root"></div>
